k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: old-world-realms-front-service
  labels:
    app: old-world-realms-front
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: old-world-realms-front
